src/scss/widgets/containers.scss
.panel-container {
    width: 200rem;
    height: 200rem;
}
.modal-container {
    width: 90rem;
    height: 60rem;
}
.keyboard-container {
    width: 220rem;
    height: 90rem;
}
.patchbay-container {
    width: 240rem;
    height: 160rem;
}


.widget-panel-base {

    --widget-padding: 4rem;

    background-color: var(--color-background);


    > inner {
        overflow: auto;
    }



    &.hidden-scroll > inner {
        scrollbar-width: none;
    }

    &.no-scroll > inner {
        overflow: hidden;
    }

    &.contains-widgets {

        > inner {
            --widget-spacing: calc(var(--widget-padding) / 2);
            margin: var(--widget-spacing);
        }

        &.no-inner-padding > inner {
            margin: calc(var(--widget-spacing) * -1);
        }

        > inner > .widget {
            padding: var(--widget-spacing);
        }

        &.layout-default > inner {
            display: block;
        }
        &.layout-horizontal > inner {
            display: flex;
            flex-direction: row;
            align-items: stretch;
            > .widget {
                top:auto!important;
                left:auto!important;
                position: relative!important;
                height: auto!important;
                min-height: auto!important;
                max-height: 100%;
            }
            > .flex-expand {
                flex: 1
            }
        }

        &.layout-horizontal.layout-contain > inner > .widget {
            min-width: auto!important;
            max-width: 100%;
        }

        &.layout-vertical > inner,
        &.layout-vertical .folder-container > inner {
            display: flex;
            flex-direction: column;
            align-items: stretch;
            > .widget {
                top:auto!important;
                left:auto!important;
                position: relative!important;
                width: auto!important;
                min-width: auto!important;
                max-width: 100%;
            }
            > .flex-expand {
                flex: 1
            }
        }
        &.layout-vertical.layout-contain > inner > .widget {
            min-height: auto!important;
            max-height: 100%;
        }

        &.layout-grid > inner,
        &.layout-grid .folder-container > inner {
            display: grid;
            > .widget {
                top:auto!important;
                left:auto!important;
                position: relative!important;
                height: auto!important;
                width: auto!important;
                min-height: auto!important;
                max-height: auto!important;
                min-width: auto!important;
                max-width: auto!important;
            }
        }

    }


    &.contains-tabs {

        > inner {

            --widget-spacing: 0;

            display: flex;
            flex-direction: column;
            // overflow: hidden;

            > .widget {
                flex: 1;
                width: 100%;
                height: auto;
                padding: 0;
            }
        }

        &.tabs-left > inner {
            flex-direction: row;
        }

        &.tabs-right > inner {
            flex-direction: row-reverse;
        }

        &.tabs-bottom > inner {
            flex-direction: column-reverse;
        }

        &.tabs-hidden > inner > .navigation {
            display: none;
        }

    }

}

.tab-container {
    @extend .widget-panel-base;

    // --widget-padding: 0rem;
    --alpha-fill-on: 0.75;

    width: 100%;
    height: 100%;
    background-color: var(--color-background);

    &:not(.show) {
        display:none
    }

}
.tab-container.editing {
    z-index: initial!important;
    &:after {
        display:none;
    }
}
.tablink.editing:after {
    margin: 2rem 2rem 4rem;
}
.tabs-left > .tablink.editing:after,
.tabs-right > .tablink.editing:after {
    margin: 2rem 4rem 2rem 2rem;
}


.panel-container {

    @extend .widget-panel-base;

    --alpha-fill-on: 0.75;

    @include pseudo-stroke($z: 1);
    &:before {
        margin: var(--widget-spacing);
    }

    &.contains-tabs {
        > inner {
            margin: calc(var(--line-width));
        }
    }

    &.contains-widgets {

        > inner {
            margin: calc(var(--widget-spacing) + var(--line-width));
        }

        &.no-inner-padding > inner {
            margin: calc(var(--widget-spacing) * -1);
        }
    }


}

.folder-container {
    display: contents;
    overflow: visible;
    contain: unset;
    min-width: 0;
    width: 0;
    min-height: 0;
    height: 0;
    padding: 0;
    margin: 0;
    > inner {
        display: contents!important;
        padding: 0;
    }
}

.root-container {

    @extend .widget-panel-base;

    --alpha-fill-on: 0.75;

    width: 100%;
    height: 100%;

    // optimize layout recalc
    &.auto-height {
        position: absolute;
        top:0;
        left:0;
        right:0;
        bottom:0;
    }

    > inner {
        margin: var(--widget-spacing);

        // optimize layout recalc
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
    }

    margin: auto;

}

.root-container.editing {
    &:after {
        display:none;
    }
}
/* ... */

